--- a/_css/layout.css
+++ b/_css/layout.css
@@ -23,7 +23,7 @@
     flex-direction: column;
 }
 .fxJcC {justify-content: center}
-.fxJcSb {justify-content: space-between}
+.fxJcSB {justify-content: space-between}
 .fxJcSA {justify-content: space-around}
 .fxJcSE {justify-content: space-evenly}
 .fxJcFS {justify-content: flex-start}
